feat(style): update css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Mastermind</title>
   </head>
   <body>
-    <div class="line">
-      <div class="red-indicator-container"></div>
-      <div class="targets-container">
-        <div class="target"></div>
-        <div class="target"></div>
-        <div class="target"></div>
-        <div class="target"></div>
+    <div class="game-container">
+      <div class="line">
+        <div class="red-indicator-container"></div>
+        <div class="targets-container">
+          <div class="target"></div>
+          <div class="target"></div>
+          <div class="target"></div>
+          <div class="target"></div>
+        </div>
+        <div class="white-indicator-container"></div>
       </div>
-      <div class="white-indicator-container"></div>
     </div>
 
     <div class="pieces">
