feat(script): refacto the code in function

--- a/index.html
+++ b/index.html
@@ -8,18 +8,7 @@
     <title>Mastermind</title>
   </head>
   <body>
-    <div class="game-container">
-      <div class="line">
-        <div class="red-indicator-container"></div>
-        <div class="targets-container">
-          <div class="target"></div>
-          <div class="target"></div>
-          <div class="target"></div>
-          <div class="target"></div>
-        </div>
-        <div class="white-indicator-container"></div>
-      </div>
-    </div>
+    <div  id="game-container"></div>
 
     <div class="pieces">
       <div id="blue-piece" draggable="true" class="piece blue"></div>
