feat(script): add restart button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mastermind</title>
   </head>
   <body>
-    <div  id="game-container"></div>
+    <div id="game-container"></div>
 
     <div class="pieces">
       <div id="blue-piece" draggable="true" class="piece blue"></div>
@@ -21,7 +21,10 @@
       <div id="maroon-piece" draggable="true" class="piece maroon"></div>
     </div>
 
-    <button id="verify">Vérifier</button>
+    <div class="button-container">
+      <button id="restart">Nouvelle partie</button>
+      <button id="verify">Vérifier</button>
+    </div>
 
     <script src="public/js/index.js"></script>
   </body>
