--- a/index.html
+++ b/index.html
@@ -25,7 +25,24 @@
       <button id="restart">Nouvelle partie</button>
       <button id="verify">Vérifier</button>
     </div>
+    <div id="win">
+      <div class="win-popup">
+        <h2>Bravo, tu as gagné</h2>
+        <p id="nb-round"></p>
+        <button id="win-restart">Nouvelle partie</button>
+      </div>
+    </div>
 
+    <div id="loose">
+      <div class="loose-popup">
+        <h2>Dommage, tu as perdu</h2>
+        <div id="solution">
+          <p>La combinaison était :</p>
+          <div id="solution-combination"></div>
+        </div>
+        <button id="loose-restart">Nouvelle partie</button>
+      </div>
+    </div>
     <script src="public/js/index.js"></script>
   </body>
 </html>
