feat(script): remove duplicate is available

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         <label for="duplicateCheck">Duplicate</label>
         <input type="checkbox" id="duplicateCheck" name="duplicate">
       </div>
-      <div id="nbColor">
-        <label for="nbColorsValue">Include NoColor</label>
+      <div id="nbColors">
+        <label for="nbColorsValue">Nombre de couleurs : </label>
         <input type="number" id="nbColorsValue" name="nbColors">
       </div>
       <div id="nbTurns">
