--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,47 @@
   <body>
     <div id="game-container"></div>
     <div id="parameters">
-      <img id="parameterLogo" src="pictures/parameterLogo.png" alt="parameters">
+      <img
+        id="parameterLogo"
+        src="pictures/parameterLogo.png"
+        alt="parameters"
+      />
     </div>
     <div id="parametersPopup">
       <div id="duplicate">
         <label for="duplicateCheck">Duplicate</label>
-        <input type="checkbox" id="duplicateCheck" name="duplicate">
+        <input type="checkbox" id="duplicateCheck" name="duplicate" />
       </div>
       <div id="nbColors">
         <label for="nbColorsValue">Nombre de couleurs : </label>
-        <input type="number" id="nbColorsValue" name="nbColors">
+        <input type="number" id="nbColorsValue" value="8" name="nbColors" />
       </div>
       <div id="nbTurns">
         <label for="nbTurnsValue">Nombre de tours : </label>
-        <input type="number" name="nbTurns" value=12 id="nbTurnsValue" required>
+        <input
+          type="number"
+          name="nbTurns"
+          value="12"
+          id="nbTurnsValue"
+          required
+        />
       </div>
       <div id="nbPossibilities">
-        <label for="nbPossibilitiesValue">Nombre de possibilités par ligne : </label>
-        <input type="number" name="nbPossibilities" value=4 id="nbPossibilitiesValue" required>
+        <label for="nbPossibilitiesValue"
+          >Nombre de possibilités par ligne :
+        </label>
+        <input
+          type="number"
+          name="nbPossibilities"
+          value="4"
+          id="nbPossibilitiesValue"
+          required
+        />
       </div>
       <div class="button-container">
-        <button id="apply">Appliquer</button>
-        <button id="cancel">Annuler</button>
+        <button id="applyParameters">Appliquer</button>
+        <button id="cancelParameters">Annuler</button>
       </div>
-      
     </div>
     <div class="pieces">
       <div id="blue-piece" draggable="true" class="piece blue"></div>
