fix(conflict): fix in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,20 @@
   </head>
   <body>
     <div id="game-container"></div>
-
+    <div id="parameters">
+      <img id="parameterLogo" src="public/pictures/parameterLogo.png" alt="parameters">
+    </div>
+    <div id="parametersPopup">
+      <div id="nbTurns"></div>
+      <div id="duplicate"></div>
+      <div id="noColor"></div>
+      <div id="nbPossibilities"></div>
+      <div class="button-container">
+        <button id="apply">Appliquer</button>
+        <button id="cancel">Annuler</button>
+      </div>
+      
+    </div>
     <div class="pieces">
       <div id="blue-piece" draggable="true" class="piece blue"></div>
       <div id="red-piece" draggable="true" class="piece red"></div>
