feat(script): update error handling

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div id="parametersPopup">
       <div id="duplicate">
         <label for="duplicateCheck">Duplicate</label>
-        <input type="checkbox" id="duplicateCheck" name="duplicate" />
+        <input type="checkbox" id="duplicateCheck" name="duplicate" checked />
       </div>
       <div id="nbColors">
         <label for="nbColorsValue">Nombre de couleurs : </label>
