fix(html): set min to nbRound input

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
           type="number"
           name="nbTurns"
           value="12"
+          min="1"
           id="nbTurnsValue"
           required
         />
