fix(build): add assets folder in dist/

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div id="parameters">
       <img
         id="parameterLogo"
-        src="pictures/parameterLogo.png"
+        src="./assets/parameterLogo.png"
         alt="parameters"
       />
     </div>
