--- a/public/index.html
+++ b/public/index.html
@@ -32,50 +32,58 @@
     </div>
 
     <div class="popup" id="parametersPopup">
-      <div class="paramsPopUp">
-        <div id="duplicate">
-          <label for="duplicateCheck">Plusieurs fois la même couleur :</label>
-          <input type="checkbox" id="duplicateCheck" name="duplicate" checked />
-        </div>
-        <div id="nbColors">
-          <label for="nbColorsValue">Nombre de couleurs : </label>
-          <input
-            type="number"
-            id="nbColorsValue"
-            name="nbColors"
-            value="8"
-            min="4"
-            max="8"
-          />
-        </div>
-        <div id="nbTurns">
-          <label for="nbTurnsValue">Nombre de tours : </label>
-          <input
-            type="number"
-            id="nbTurnsValue"
-            name="nbTurns"
-            value="12"
-            min="1"
-            max="15"
-            required
-          />
-        </div>
-        <div id="nbPossibilities">
-          <label for="nbPossibilitiesValue"
-            >Nombre de possibilités par ligne :
-          </label>
-          <input
-            type="number"
-            id="nbPossibilitiesValue"
-            name="nbPossibilities"
-            value="4"
-            max="12"
-            required
-          />
+      <div id="paramsPopUp">
+        <h2>Paramètres</h2>
+        <div class="list-params">
+          <div id="duplicate" class="param">
+            <label for="duplicateCheck">Couleurs dupliquées :</label>
+            <input
+              type="checkbox"
+              id="duplicateCheck"
+              name="duplicate"
+              checked
+            />
+          </div>
+          <div id="nbColors" class="param">
+            <label for="nbColorsValue">Nombre de couleurs : </label>
+            <input
+              type="number"
+              id="nbColorsValue"
+              name="nbColors"
+              value="8"
+              min="4"
+              max="8"
+            />
+          </div>
+          <div id="nbTurns" class="param">
+            <label for="nbTurnsValue">Nombre de tours : </label>
+            <input
+              type="number"
+              id="nbTurnsValue"
+              name="nbTurns"
+              value="12"
+              min="1"
+              max="15"
+              required
+            />
+          </div>
+          <div id="nbPossibilities" class="param">
+            <label for="nbPossibilitiesValue"
+              >Nombre de possibilités par ligne :
+            </label>
+            <input
+              type="number"
+              id="nbPossibilitiesValue"
+              name="nbPossibilities"
+              value="4"
+              max="12"
+              required
+            />
+          </div>
         </div>
         <div class="button-container">
-          <button id="applyParameters">Appliquer</button>
           <button id="cancelParameters">Annuler</button>
+          <button id="applyParameters">Appliquer</button>
         </div>
       </div>
     </div>
