feat(game): add tooltip to display rounds left

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,12 @@
 
     <div class="button-container">
       <button id="restart">Nouvelle partie</button>
-      <button id="verify">Vérifier</button>
+      <div class="verify-container">
+        <button id="verify">Vérifier</button>
+        <div id="tooltip">
+          <p>Il vous reste <span>11</span> tours</p>
+        </div>
+      </div>
     </div>
 
     <div class="popup" id="parametersPopup">
