fix(game): typo

--- a/public/index.html
+++ b/public/index.html
@@ -104,18 +104,18 @@
       </div>
     </div>
 
-    <div class="popup" id="loose">
-      <div class="loose-popup">
+    <div class="popup" id="lose">
+      <div class="lose-popup">
         <h2>Dommage, tu as perdu</h2>
         <div id="solution">
           <p>La combinaison était :</p>
           <div id="solution-combination"></div>
         </div>
         <div class="button-container">
-          <button class="reduce-popUp" id="reduce-loose">
+          <button class="reduce-popUp" id="reduce-lose">
             Revoir la partie
           </button>
-          <button id="loose-restart">Nouvelle partie</button>
+          <button id="lose-restart">Nouvelle partie</button>
         </div>
       </div>
     </div>
