feat(indexParameters): possibility to tap enter to submit parameters (form now)

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,9 @@
         </div>
         <div class="button-container">
           <button id="cancelParameters">Annuler</button>
-          <button id="applyParameters" type="submit" value="Enter">Appliquer</button>
+          <button id="applyParameters" type="submit" value="Enter">
+            Appliquer
+          </button>
         </div>
       </div>
     </form>
