--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
               name="nbPossibilities"
               value="4"
               max="12"
+              min="1"
               required
             />
           </div>
