feat(record): display the record in the endGame popup

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,11 @@
       <div class="win-popup">
         <h2>Bravo, tu as gagné</h2>
         <p id="nb-round"></p>
+        <div id="win-record">
+          <img src="./assets/trophy.png" alt="trophy" width="30" />
+          <p></p>
+          <img src="./assets/trophy.png" alt="trophy" width="30" />
+        </div>
         <div class="button-container">
           <button class="reduce-popUp" id="reduce-win">Revoir la partie</button>
           <button id="win-restart">Nouvelle partie</button>
@@ -114,6 +119,11 @@
         <div id="solution">
           <p>La combinaison était :</p>
           <div id="solution-combination"></div>
+        </div>
+        <div id="lose-record">
+          <img src="./assets/trophy.png" alt="trophy" width="30" />
+          <p></p>
+          <img src="./assets/trophy.png" alt="trophy" width="30" />
         </div>
         <div class="button-container">
           <button class="reduce-popUp" id="reduce-lose">
