fix(html): remove unused submit button

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <div class="button-container">
       <button id="restart">Nouvelle partie</button>
       <div class="verify-container">
-        <button id="verify" type="submit">Vérifier</button>
+        <button id="verify">Vérifier</button>
         <div id="tooltip">
           <p>Il vous reste <span>11</span> tours</p>
         </div>
